fix: fix layout bug

--- a/components/VideoPlayer/VideoPlayer.module.css
+++ b/components/VideoPlayer/VideoPlayer.module.css
@@ -284,5 +284,12 @@
         transform: scale(1);
         z-index: 2;
     }
+
+    .providerContainer {
+        opacity: 1;
+        font-size: 20px;
+        flex-wrap: wrap;
+        height: fit-content;
+    }
 }
 /*  */
